# architecture20

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  AWESOME.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  add_epigraphs.py  add_epigraphs_5_to_10.py  arch2  extract_annots.py  fix_ch5.py  fix_ch5_rewrite.py  fix_ch5_rewrite_2.py  fix_ch5_rewrite_3.py  fix_footnotes.py  fix_grammar.py  fix_latex.py  fix_lighthouse_bolding.py  fix_newlines.py  fix_quarto.py  fix_research_qs.py  format_research_qs.py  generate_ch5.py  get_intros.py  inject_ml_refs.py  intro_dump.txt  reorder_ch5.py  requirements-card.txt  requirements-cff.txt  requirements.txt  review_margin_notes.py  rewrite_ch5.py  rewrite_research_questions.py  scratch_diff.patch  shorten_margin_notes.py
labs/: ARCH2_LAB_SYSTEM_PLAN.md  GOAL.md  README.md  STARTER_LABS_DESIGN.md  pyproject.toml  requirements.txt
labs/arch2_labs/: __init__.py  decisions.py  environment.py  estimates.py  presentation.py  receipts.py  scale_env.py  schemas.py  study.py  study_live.py  validators.py
labs/arch2_labs/resources/: design-loop-card.v1.schema.json
labs/constraints/: py310-linux.txt  py311-linux.txt
labs/examples/ai_systolic_array_study/: README.md
labs/examples/ai_systolic_array_study/context/: model_output.schema.json  model_prompt.md  pre_registration.yaml
labs/examples/ai_systolic_array_study/recorded/model/: original_response.json  provenance.json
labs/examples/ai_systolic_array_study/recorded/reference/: evaluations.jsonl  execution_provenance.json  study_results.json  (+1 more)
labs/examples/ai_systolic_array_study/workloads/: xr_slice_gemm_transposed.csv
labs/examples/scale_proxy_mirage/: README.md  human_decision.example.yaml  lab.py
labs/examples/scale_proxy_mirage/configs/: candidates.yaml
labs/examples/scale_proxy_mirage/layouts/: default_layout.csv
labs/examples/scale_proxy_mirage/starter_receipt/: card.yaml  environment.yaml
labs/fixtures/: alphachip_public_record_card.json
labs/notebooks/: README.md  lab_01_prompt_to_card.py  lab_02_scissors_gap.py  lab_03_score_a_claim.py  lab_04_represent_and_replay.py  lab_05_environment_contract.py  lab_07_earned_trust.py  lab_08_run_the_loop.py  lab_09_same_loop_different_costs.py  lab_10_own_the_commitment.py
labs/tests/: conftest.py  test_decisions.py  test_environment.py  test_notebooks.py  test_packaging.py  test_presentation.py  test_receipt_safety.py  test_scale_env.py  test_schemas.py  test_study.py  test_study_live.py  test_validators.py
(+461 files in other folders)
