[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "arch2-labs"
version = "0.1.0"
description = "Runnable Architecture 2.0 lab helpers for loop receipts and lightweight simulator-backed examples."
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [
    {name = "Vijay Janapa Reddi", email = "vj@eecs.harvard.edu"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "jsonschema>=4.23",
    "numpy<2",
    "PyYAML>=6",
    "scalesim==3.0.0",
]

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8"]
notebook = ["marimo>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["arch2_labs"]

[tool.hatch.build.targets.wheel.force-include]
"examples" = "arch2_labs/examples"

[tool.hatch.build.targets.sdist]
include = [
    "arch2_labs",
    "examples",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
